--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "url": "https://github.com/DashDeipayan/RDS-Github-Login/issues"
   },
   "homepage": "https://github.com/DashDeipayan/RDS-Github-Login#readme",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "mixpanel-browser": "^2.43.0"
+  }
 }
